# trial_bot

./: .gitignore  Dockerfile  README.md  bot.py  config.json.example  main.py  pyproject.toml  requirements.txt
configs/: config.MD  config.json.example  insults.txt
src/: bot.py  main.py  storage.py  test.py
src/Cogs/: Events.py  General.py  Music.py  MusicBase.py  MusicEvents.py  Play.py  Playing.py  Queue.py  SocketFix.py
src/Utils/: DB.py  Helpers.py  Lavalink.py  Storage.py  funcs.py  storage.py
trial/: __init__.py  config.py
trial/Cogs/: General.py  Music.py  MusicBase.py  MusicEvents.py  Play.py  Playing.py  Queue.py  Voice.py  VoiceBase.py  VoiceEvents.py
trial/Utils/: Helpers.py  LavalinkVC.py  voice_url.js
